--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="contacto.html">Contacto</a>
           </div>
     </div>
+    <div class="contenedor">
     <div class="imagenes">
         <div class="caja-1">
             <img src="img/hel_fresa.jpg" alt="">
@@ -27,8 +28,17 @@
             <img src="img/hel_chocolate.jpg" alt="">
         </div>
     </div>
-    <div class="">
-
     </div>
+    <section class="seccion-presentacion">
+        <div class="contenedor-presentacion">
+          <h2>Acerca de Nosotros</h2>
+          <h3>Todo el sabor de México en un helado en Bolivia</h3>
+          <p>
+            Nos caracterizamos por nuestra gran variedad de sabores exclusivos e innovadores para paladares exigentes. 
+            La Michoacana es una marca de origen mexicano con una gran trayectoria en el mundo de los helados artesanales. 
+            En Bolivia operamos desde 2025, compartiendo la riqueza de la gastronomía mexicana en el mundo de los postres congelados.
+          </p>
+        </div>
+    </section>      
 </body>
 </html>
