--- a/novedades.html
+++ b/novedades.html
@@ -16,6 +16,7 @@
             <a href="contacto.html">Contacto</a>
           </div>
     </div>
+    <div class="contenedor">
     <div class="imagenes">
         <div class="caja-1">
             <img src="img/hel_fresa.jpg" alt="">
@@ -26,6 +27,7 @@
         <div class="caja-3">
             <img src="img/hel_chocolate.jpg" alt="">
         </div>
+    </div>
     </div>
 </body>
 </html>
