--- a/productos.html
+++ b/productos.html
@@ -31,25 +31,25 @@
     <div class="opciones">
         <div class="caja-4 categoria">
             <a href="helados.html">
-                <img src="img/hel_fresa.jpg" alt="Helados">
+                <img src="img/helados.jpg" alt="Helados">
                 <span>HELADOS</span>
             </a>
         </div>
         <div class="caja-5 categoria">
             <a href="postres.html">
-                <img src="img/hel_blueberry.jpg" alt="Postres">
+                <img src="img/postres.jpg" alt="Postres">
                 <span>POSTRES</span>
             </a>
         </div>
         <div class="caja-6 categoria">
             <a href="bebidas.html">
-                <img src="img/hel_chocolate.jpg" alt="Bebidas">
+                <img src="img/jugos.jpg" alt="Bebidas">
                 <span>BEBIDAS</span>
             </a>
         </div>
         <div class="caja-7 categoria">
             <a href="comidas.html">
-                <img src="img/hel_chocolate.jpg" alt="Comidas">
+                <img src="img/hamburguesa.jpg" alt="Comidas">
                 <span>COMIDAS</span>
             </a>
         </div>
