--- a/contacto.html
+++ b/contacto.html
@@ -17,6 +17,7 @@
             <a href="contacto.html" class="active">Contacto</a>
           </div>
     </div>
+    <div class="contenedor">
     <div class="imagenes">
         <div class="caja-1">
             <img src="img/hel_fresa.jpg" alt="">
@@ -27,6 +28,7 @@
         <div class="caja-3">
             <img src="img/hel_chocolate.jpg" alt="">
         </div>
+    </div>
     </div>
 
     <div class="contacto">
