--- a/index.html
+++ b/index.html
@@ -28,6 +28,35 @@
             <img src="img/hel_chocolate.jpg" alt="">
         </div>
     </div>
+    <div class="contenedor">
+        <div class="opciones">
+            <div class="caja-4 categoria">
+                <a href="helados.html">
+                    <img src="img/helados.jpg" alt="Helados">
+                    <span>HELADOS-INICIO</span>
+                </a>
+            </div>
+            <div class="caja-5 categoria">
+                <a href="postres.html">
+                    <img src="img/postres.jpg" alt="Postres">
+                    <span>POSTRES-INICIO</span>
+                </a>
+            </div>
+            <div class="caja-6 categoria">
+                <a href="bebidas.html">
+                    <img src="img/jugos.jpg" alt="Bebidas">
+                    <span>BEBIDAS-INICIO</span>
+                </a>
+            </div>
+            <div class="caja-7 categoria">
+                <a href="comidas.html">
+                    <img src="img/hamburguesa.jpg" alt="Comidas">
+                    <span>COMIDAS-INICIO</span>
+                </a>
+            </div>
+        </div>
+        </div>
+    </div>
     </div>
     <section class="seccion-presentacion">
         <div class="contenedor-presentacion">
